scripts/nullaway/nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8.txt
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/P040.java:14: error: [NullAway] initializer method does not guarantee @NonNull field indices (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public P040() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:55: error: [NullAway] dereferenced expression this.getTriangle().get(i) is @Nullable
                this.getTriangle().get(i)[j] += Math.max(this.getTriangle().get(i + 1)[j], this.getTriangle().get(i + 1)[j + 1]);
                                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:55: error: [NullAway] dereferenced expression this.getTriangle().get(i + 1) is @Nullable
                this.getTriangle().get(i)[j] += Math.max(this.getTriangle().get(i + 1)[j], this.getTriangle().get(i + 1)[j + 1]);
                                                                                      ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:55: error: [NullAway] dereferenced expression this.getTriangle().get(i + 1) is @Nullable
                this.getTriangle().get(i)[j] += Math.max(this.getTriangle().get(i + 1)[j], this.getTriangle().get(i + 1)[j + 1]);
                                                                                                                        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:58: error: [NullAway] dereferenced expression this.getTriangle().get(0) is @Nullable
        return this.getTriangle().get(0)[0];
                                        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p1to19/P011.java:27: error: [NullAway] initializer method does not guarantee @NonNull field grid (line 25) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public P011() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p1to19/P014.java:17: error: [NullAway] initializer method does not guarantee @NonNull field chainLengths (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public P014() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/CommonTest.java:147: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
            assertTrue(e.getMessage().contains("non-negative"));
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/CommonTest.java:162: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
            assertTrue(e.getMessage().contains("39"));
                                     ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P028.java:14: error: [NullAway] initializer method does not guarantee @NonNull field numberSquare (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public P028() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P024.java:25: error: [NullAway] initializer method does not guarantee @NonNull field remainingDigits (line 21) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public P024() {
           ^
    (see http://t.uber.com/nullaway )
11 errors
